[metadata]
name = phone_digits
version = 0.0.1
url = https://github.com/owen7lloyd/phone_digits
platforms = any
description_file = README.md
root_url = https://github.com/owen7lloyd/
license = apache-2.0
author = Owen Lloyd
description = Detecting phone digits from iPhone speaker
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = phone_digits

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	streamlit
	
